# autonomous-quality-engine

./: .cursorrules  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  status.md
.cursor/: mcp.json.example
.cursor/rules/: ai-audit-governance.mdc  gemini-sdk-migration.mdc  genai-standards.mdc  page-object-standards.mdc  playwright-core-sync.mdc  test-strategy.mdc
.github/: pull_request_template.md
.github/workflows/: ai-failure-analysis.yml  test.yml
ai_audit/: __init__.py  client.py  failure_analyzer.py  gemini_client.py  ollama_client.py
config/: env.example  settings.py
core/: __init__.py  base_page.py  driver.py  orangehrm_urls.py  page_factory.py
docs/: ARCHITECTURE.md  PROJECTSTATUS.md  README.md  STATUS.md
docs/decisions/: ci-ai-failure-analysis.md  playwright-locators-and-logging.md
docs/plans/: plan-cursorrules-split.md  plan-dependency-determinism.md
docs/reference/: gemini-genai-sdk-docs.md  github-actions-build-test-python.md  github-actions-docker-service-containers.md  github-actions-manage-custom-actions.md  github-actions-quickstart.md  github-actions-trigger-workflow.md  github-licensing-repository.md  python-documentation.md
pages/: __init__.py  dashboard_page.py  login_page.py
pages/leave/: __init__.py  leave_list_page.py
pages/pim/: __init__.py  add_employee_page.py  employee_list_page.py
scripts/: run_failure_analyzer.sh
tests/: conftest.py
tests/regression/: test_leave.py  test_pim_employee.py
tests/smoke/: __init__.py  test_login.py
utils/: helpers.py  logger.py
(+1 files in other folders)
